--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -24,7 +24,7 @@
     <![endif]-->
 	
 	<!-- [FONT EMBEDDING] -->
-	<link rel="stylesheet" href="http://f.fontdeck.com/s/css/tw8rERty3+tZwbQpfxuhJVo9m7Q/www.relais-abbazia.it/30043.css" type="text/css" />
+<!-- 	<link rel="stylesheet" href="http://f.fontdeck.com/s/css/tw8rERty3+tZwbQpfxuhJVo9m7Q/www.relais-abbazia.it/30043.css" type="text/css" /> -->
 
 	<!-- [FILE JS] -->
     <!--[if lt IE 9]>
@@ -44,21 +44,9 @@
 	<header>
 		<div>
 
-			<a id="logo" href="it/index.html">Luna Bed & Breakfast a Milano</a>
-
-<!-- 			<nav id="menu" class="index"> -->
-<!-- 				<span class="toggler"></span> -->
-<!-- 				<ul> -->
-<!-- 					<li class="casa"><a href="it/casa.html"><span>la casa</span></a></li> -->
-<!-- 					<li class="camere"><a href="it/camere.html"><span>le camere</span></a></li> -->
-<!-- 					<li class="servizi"><a href="it/servizi.html"><span>i servizi</span></a></li> -->
-<!-- 					<li class="prezzi"><a href="it/prezzi.html"><span>prezzi</span></a></li> -->
-<!-- 					<li class="prenotazioni"><a href="it/prenotazioni.html"><span>prenotazioni</span></a></li> -->
-<!-- 					<li class="contatti"><a href="it/contatti.html"><span>contatti</span></a></li> -->
-<!-- 				</ul> -->
-<!-- 			</nav> -->
+			<a id="logo" href="it/index.html">Luna Bed <em class="amp">&</em> Breakfast a Milano</a>
 			
-			<nav id="menu2">
+			<nav id="menu" class="index">
 				<span class="toggler"></span>
 				<ul>
 					<li class="casa2"><a href="it/casa.html"><span>la casa</span></a></li>
@@ -69,16 +57,7 @@
 					<li class="contatti2"><a href="it/contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
-			
-<!-- 			<nav id="lang"> -->
-<!-- 				<ul> -->
-<!-- 					<li class="it"><a href="it/index.html"><span>IT</span></a></li> -->
-<!-- 					<li class="en"><a href="en/index.html"><span>EN</span></a></li> -->
-<!-- 					<li class="de"><a href="de/index.html"><span>DE</span></a></li> -->
-<!-- 					<li class="fr"><a href="fr/index.html"><span>FR</span></a></li> -->
-<!-- 					<li class="es"><a href="/es/casa.html"><span>ES</span></a></li> -->
-<!-- 				</ul> -->
-<!-- 			</nav> -->
+
 			 <nav id="lang2">
 				<ul>
 					<li class="it2"><a href="./index.html"><span>IT</span></a> </li>
@@ -98,8 +77,8 @@
 		</section>
 		<aside>
 			<div>
-				<p id="txt1">Benvenuto al Luna Bed <em class="amp">&</em> Breakfast </p>
-				<p id="txt2"><span>A Milano, stazione MM3 Affori centro.</span></p>
+				<p id="txt1">Benvenuto al B<em class="amp">&</em>B</p>
+				<p id="txt2"><span>A Milano.</span></p>
 			</div>
 		</aside>
 	
