--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -95,10 +95,10 @@
 				<ul>
 					<li id="room1"><a href="#" class="opengallery"
 						data-gallery-id="35"><h3>Camera “Uno”</h3>
-							<img src="../media/img/photos/camera_1.jpg" alt="" /></a></li>
+							<img src="../media/img/photos/camera_1.JPG" alt="" /></a></li>
 					<li id="room2"><a href="#" class="opengallery"
 						data-gallery-id="45"><h3>Camera “Due”</h3>
-							<img src="../media/img/photos/camera_2.jpg" alt="" /></a></li>
+							<img src="../media/img/photos/camera_2.JPG" alt="" /></a></li>
 				</ul>
 			</aside>
 
