--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -82,14 +82,10 @@
 					<strong>Spazi a disposizione degli ospiti</strong>:
 				</p>
 				<a href="#" class="opengallery" data-gallery-id="20"><img
-					src="/media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>sala
+					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>sala
 						colazioni</span></a> <a href="#" class="opengallery" data-gallery-id="02"><img
-					src="/media/img/photos/servizi_giardino-interno.jpg" alt="" /><span>giardino
-						interno</span></a> <a href="#" class="opengallery" data-gallery-id="90"><img
-					src="/media/img/photos/servizi_balconcino-fumatori.jpg" alt="" /><span>balconcino
-						fumatori</span></a> <a href="#" class="opengallery" data-gallery-id="54"><img
-					src="/media/img/photos/servizi_salotto-ospiti.jpg" alt="" /><span>salotto
-						ospiti</span></a>
+					src="../media/img/photos/servizi_giardino.jpg" alt="" /><span>giardino
+						interno</span></a> 
 			</aside>
 
 			<p>
@@ -135,28 +131,10 @@
 	</article>
 
 	<footer>
-		<div>
-			<p class="contact">
-				<strong>Il Relais dell'Abbazia</strong><em> - </em><span>Vicolo
-					dietro Caserma Chiodo, 18 - 37123 Verona (VR) ITALIA</span><br />
-				<span>Email: <a href="mailto:info@relais-abbazia.it">info@relais-abbazia.it</a></span><em>
-					- </em><span>Cellulare: <a href="tel:+39.348.7059368">+39.348.7059368</a></span>
-			</p>
-			<p class="socials">
-				<strong>Per aggiornamenti, offerte speciali e<br />proposte
-					last-minute seguici su:
-				</strong> <a
-					href="http://www.facebook.com/pages/Il-Relais-dellAbbazia/299610456780827"
-					class="facebook">Facebook</a> <a
-					href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a>
-				<a
-					href="http://www.tripadvisor.it/Hotel_Review-g187871-d3171914-Reviews-Relais_dell_Abbazia-Verona_Province_of_Verona_Veneto.html"
-					class="tripadvisor">Tripadvisor</a>
-			</p>
-			<p class="credits">
-				<a class="credits" href="/it/credits.html">credits</a>
-			</p>
-		</div>
+			<div>
+					<p class="contact"><strong>????? B&B</strong><em> - </em><span>Via Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br/><span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span></p>
+			<p class="socials"><strong>Per aggiornamenti, offerte speciali e<br/>proposte last-minute seguici su:</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a> <a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a> <a href="http://www.tripadvisor.it/Hotel_Review???.html" class="tripadvisor">Tripadvisor</a></p>
+			</div>
 	</footer>
 
 	<figure id="gallery">
