--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -76,10 +76,10 @@
 		<section>
 	
 			<hgroup>
-				<h1>La casa, un'antica dimora a due passi dal centro di Verona</h1>
+				<h1>La casa indipendente, a poche fermate di metropolitana da stazione centrale e Duomo di Milano</h1>
 			</hgroup>
 
-			<p>Ricavata da una porzione di fienile appartenente al complesso benedettino vicino alla Abbazia di San Zeno, la dimora che ospita “il relais dell’abbazia” si trova nel centro storico di Verona (l’Arena dista solo una decina di minuti).</p>
+			<p>La casa risale al 1930, successivamente ricostruita dopo i danni subiti dai bombardamenti della seconda Guerra Mondiale che hanno colpito Milano.</p>
 	
 			<aside>
 				<a href="#" class="opengallery" data-gallery-id="26"><img src="../media/img/photos/casa_pict1.jpg" alt="" /></a>
@@ -90,15 +90,17 @@
 				<a href="#" class="opengallery" data-gallery-id="05"><img src="../media/img/photos/casa_pict6.jpg" alt="" /></a>
 			</aside>
 
-			<p>Muri spessi e soffitti bassi che riflettono una luce stemperata e rilassante offrono da subito un’atmosfera accogliente e tranquilla. Françoise e Franco sono gli affabili e premurosi padroni di casa che vi metteranno subito a vostro agio.</p>
-			<p>La casa è strutturata su due piani: al piano terra troviamo un’ampia cucina padronale, dove viene preparato il buffet della colazione, un soggiorno e lo spazio abitativo privato della famiglia. Da queste stanze è possibile accedere direttamente al delizioso giardino esterno: un angolo verde, fresco e rilassante, dove durante la bella stagione viene servita la colazione.</p>
-			<p>Grazie alla sua ubicazione, passeggiando lungo il fiume Adige e ammirando Castel Vecchio, è possibile raggiungere a piedi Piazza delle Erbe, visitare la Casa di Giulietta, fare shopping nella zona pedonale o arrivare all’Arena per assistere all'esecuzione di un’opera.</p>
-			<p>La posizione geografica di Verona è centrale, ideale per visitare anche altre città come Milano, Bologna, Vicenza, Padova o Venezia (per quest’ultima in treno ci vuole poco più di un’ora) oppure percorrere le strade del vino e del gusto, di cui la nostra regione offre tante esperienze esaltanti.</p>
 
+<p>Una nuova rinascita nel 2014, con la ristrutturazione dell'intero edificio ad opera di papà Mimmo e dei fratelli, attenti a personalizzare gli spazi e a curare ogni dettaglio.
+La casa vanta di una sistemazione indipendete e di un grazioso giardino interno, dove sarà possibile gustare la colazione nelle mattine estive e godere di fresca tranquillità nei momenti di pausa dalle passeggiate cittadine.
+Nei mesi invernali la colazione sarà servita nel salone comune, ove si affacciano le due stanze, e dove saranno a disposizione degli ospiti, a qualunque ora del giorno, bibite calde e fresche.</p>
+<p>La dimora è situata nel cuore del quartiere Affori di Milano, antico ducato nella periferia settentrionale della città del quale è ancora possibile scorgere tracce medievali e rinascimentali.
+A pochi passi dal B&B ???? si trova Villa Litta con il suo Parco collinare, antica residenza estiva della nobiltà milanese, oggi sede della Biblioteca Comunale.</p>
+<p>Le trasformazioni industriali del secolo scorso e lo sviluppo territoriale che ha investito nel tempo il quartiere, hanno portato ad ampliare negli anni i collegamenti sia verso la parte nord dell'hinterland milanese sia verso il centro città.
+Il B&B ????? oggi sorge a soli 300 mt dalla fermata della Metropolitana Affori Centro (linea3Gialla), in pochi minuti sarà possibile raggiungere il centro della città e ammirare la maestosità del Duomo, passeggiare lungo la Galleria  Vittorio Emanuele, raggiungere il Teatro alla Scala e il Castello Sforzesco.
+</p>
 		</section>
-	
 	</article>
-
 	<footer>
 			<div>
 					<p class="contact"><strong>????? B&B</strong><em> - </em><span>Via Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br/><span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span></p>
