original text added

--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -71,25 +71,18 @@
 	</header>
  
 	<article>
-
 		<section>
-
 			<hgroup>
-				<h1>Le camere, ognuna con un proprio stile e tratto distintivo</h1>
+				<h1>Le stanze sono situate su un unico piano indipendente</h1>
 			</hgroup>
 
-			<p>Il primo piano è dedicato completamente agli ospiti: vi sono
-				tre camere, tutte diverse fra loro, ognuna con bagno privato, non
-				adiacenti le une alle altre. La zona dispone di una scala interna
-				che collega direttamente ad un’entrata secondaria, a garanzia della
-				massima libertà di movimento per i nostri ospiti.</p>
-			<p>
-				Tutte le nostre camere hanno il parquet, le travi a vista e un
-				caminetto interno, sono arredate con mobili rustici dell’800 e
-				offrono biancheria di pregio; i bagni sono provvisti di
-				scaldasalviette, asciugacapelli e set di cortesia.<br />Le stanze
-				sono dotate di televisore satellitare e climatizzazione autonoma.
-			</p>
+			<p>Le due stanze sono situate su un unico piano e si affacciano sul 
+			salone comune pronto ad ospitarvi per la colazione mattutina e offrirvi 
+			un dolce ristoro nelle altre ore del giorno.</p>
+			<p>Le ampie stanze, dove antico e moderno si intrecciano, offrono un ambiente 
+			luminoso e confortevole. I dettagli scelti per personalizzare ciascuna stanza 
+			sono stati pensati per rendere piacevole e rigenerante il vostro soggiorno.
+			<br />Le stanze sono dotate di tv e wifi gratuito. </p>
 
 			<aside>
 				<ul>
