--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -98,6 +98,7 @@ Nei mesi invernali la colazione sarà servita nel salone comune, ove si affaccia
 A pochi passi dal B&B ???? si trova Villa Litta con il suo Parco collinare, antica residenza estiva della nobiltà milanese, oggi sede della Biblioteca Comunale.</p>
 <p>Le trasformazioni industriali del secolo scorso e lo sviluppo territoriale che ha investito nel tempo il quartiere, hanno portato ad ampliare negli anni i collegamenti sia verso la parte nord dell'hinterland milanese sia verso il centro città.
 Il B&B ????? oggi sorge a soli 300 mt dalla fermata della Metropolitana Affori Centro (linea3Gialla), in pochi minuti sarà possibile raggiungere il centro della città e ammirare la maestosità del Duomo, passeggiare lungo la Galleria  Vittorio Emanuele, raggiungere il Teatro alla Scala e il Castello Sforzesco.
+Nei paraggi sorge l'Alcatraz, storico locale milanese che ospita concerti ed eventi.
 </p>
 		</section>
 	</article>
