--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -74,8 +74,8 @@
 			</aside>
 
 			<section>
-				<p>Il bed & breakfast si trova nel centro storico di Verona, a
-					pochi passi dalla Basilica di San Zeno.</p>
+			
+				<p>?????? si trova a due minuti a piedi dalla fermata della Metropolitana Affori Centro (Linea Gialla)</p>
 				<p>Potete contattarci ai seguenti indirizzi:</p>
 				<ul>
 					<li><span>Indirizzo:</span><strong><a
