--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -96,13 +96,13 @@
 				<ul>
 					<li id="room1"><a href="#" class="opengallery"
 						data-gallery-id="5874"><h3>Camera “Uno”</h3> <img
-							src="../media/img/photos/camera_1.JPG" alt="" /></a></li>
+							src="../media/img/photos/camera_1.jpg" alt="" /></a></li>
 					<li id="room2"><a href="#" class="opengallery"
 						data-gallery-id="5826"><h3>Camera “Due”</h3> <img
-							src="../media/img/photos/camera_2.JPG" alt="" /></a></li>
+							src="../media/img/photos/camera_2.jpg" alt="" /></a></li>
 				</ul>
 			</aside>
-			<figure id="gallery">
+			<figure id="gallery">JPG
 				<a href="../media/img/photos/galleria/IMGS5874.jpg"
 					data-milkslide="galleria" data-gallery-id="5874"
 					title="Camera 'Uno'"></a>
