--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -102,7 +102,7 @@
 							src="../media/img/photos/camera_2.jpg" alt="" /></a></li>
 				</ul>
 			</aside>
-			<figure id="gallery">JPG
+			<figure id="gallery">
 				<a href="../media/img/photos/galleria/IMGS5874.jpg"
 					data-milkslide="galleria" data-gallery-id="5874"
 					title="Camera 'Uno'"></a>
