gallery for mobile fixed

--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -51,10 +51,8 @@
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le
-								camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i
-								servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
@@ -62,8 +60,7 @@
 
 			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
-					</li>
+					<li class="it2"><a href="../it/index.html"><span>IT</span></a></li>
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
