--- a/WebContent/it/gallery.html
+++ b/WebContent/it/gallery.html
@@ -62,143 +62,49 @@
 				<h1>Galleria immagini</h1>
 			</hgroup>
 
+			<figure id="gallery">
 
-			<h2>
-				<strong>Camera 'Uno</strong>
-			</h2>
-			<!-- <img src="/media/img/photos/galleria/01_DSC4668_small.jpg"   id="photo_id01" /> -->
-			
-				<img
-				src="../media/img/photos/galleria/09_DSC4654_small.jpg"
-				id="photo_id09" />
-			<img src="../media/img/photos/galleria/small/IMGS5826.jpg" id="photo_id5826" />
-			<img src="../media/img/photos/galleria/small/IMGS5826.jpg" id="photo_id5826" />
-			<img src="../media/img/photos/galleria/small/IMGS5826.jpg" id="photo_id5826" />
-			<img src="../media/img/photos/galleria/small/IMGS5826.jpg" id="photo_id5826" />
- 			<img
-				src="../media/img/photos/galleria/09_DSC4654_small.jpg" id="photo_id09" />
-<!-- 			<img src="../media/img/photos/galleria/IMGS5874.jpg" id="5874" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5875.jpg" id="5875" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5876.jpg" id="5876" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5877.jpg" id="5877" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5878.jpg" id="5878" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5880.jpg" id="5880" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5934.jpg" id="5934" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5935.jpg" id="5935" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS5937.jpg" id="5937" /> -->
-<!-- 			<img src="../media/img/photos/galleria/IMGS6177.jpg" id="6177" /> -->
+				<h2>
+					<strong>Camera 'Uno'</strong>
+				</h2>
+<img src="../media/img/photos/galleria/small/IMGS5874.jpg" id="photo_id5874" /> 
+<img src="../media/img/photos/galleria/small/IMGS5876.jpg" id="photo_id5876" /> 
+<img src="../media/img/photos/galleria/small/IMGS5877.jpg" id="photo_id5877" /> 
+<img src="../media/img/photos/galleria/small/IMGS5878.jpg" id="photo_id5878" /> 
+<img src="../media/img/photos/galleria/small/IMGS5880.jpg" id="photo_id5880" /> 
 
+				<h2>
+					<strong>Camera 'Due'</strong>
+				</h2>
+				<img src="../media/img/photos/galleria/small/IMGS5826.jpg" id="photo_id5826" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5832.jpg" id="photo_id5832" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5881.jpg" id="photo_id5881" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5883.jpg" id="photo_id5883" /> 
 
+				<h2>
+					<strong>La sala per la colazione</strong>
+				</h2>
+				<img src="../media/img/photos/galleria/small/IMGS5887.jpg" id="photo_id5887" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5893.jpg" id="photo_idIMGS5893" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5900.jpg" id="photo_id5900" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5903.jpg" id="photo_id5903" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5904.jpg" id="photo_id5904" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5910.jpg" id="photo_id5910" /> 
 
+				<h2>
+					<strong>Cortile interno</strong>
+				</h2>
+				<img src="../media/img/photos/galleria/small/IMGS5841.jpg" id="photo_id5841" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5847.jpg" id="photo_idIMGS5847" />
+				
+				<h2>
+					<strong>Ingresso in via Bernardo da Canal 24</strong>
+				</h2>
+				<img src="../media/img/photos/galleria/small/IMGS5916.jpg" id="photo_id5916" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5918.jpg" id="photo_id5918" />
+				<img src="../media/img/photos/galleria/small/IMGS5919.jpg" id="photo_id5919" />
 
-
-
-			<h2>
-				<strong>Il giardino interno</strong>
-			</h2>
-			<!-- <img src="/media/img/photos/galleria/01_DSC4668_small.jpg"   id="photo_id01" /> -->
-			<img src="/media/img/photos/galleria/02_DSC4685_small.jpg"
-				id="photo_id02" />
-			<!-- <img src="/media/img/photos/galleria/03_DSC4689_small.jpg"   id="photo_id03" /> -->
-			<!-- <img src="/media/img/photos/galleria/04_DSC4639_small.jpg"   id="photo_id04" /> -->
-			<img src="/media/img/photos/galleria/05_DSC4646_small.jpg"
-				id="photo_id05" />
-			<!-- <img src="/media/img/photos/galleria/06_DSC4647_small.jpg"   id="photo_id06" /> -->
-			<!-- <img src="/media/img/photos/galleria/07_DSC4648_small.jpg"   id="photo_id07" /> -->
-			<img src="../media/img/photos/galleria/08_DSC4651_small.jpg"
-				id="photo_id08" /> 
-				<img
-				src="/media/img/photos/galleria/09_DSC4654_small.jpg"
-				id="photo_id09" />
-			<!-- <img src="/media/img/photos/galleria/10_DSC4660_small.jpg"   id="photo_id10" /> -->
-			<!-- <img src="/media/img/photos/galleria/11_DSC4659_small.jpg"   id="photo_id11" /> -->
-			<img src="/media/img/photos/galleria/90_angolo3_small.jpg"
-				id="photo_id90" />
-			<!-- <img src="/media/img/photos/galleria/91_ortensie_small.jpg"  id="photo_id91" /> -->
-			<img src="/media/img/photos/galleria/92_nicchia_small.jpg"
-				id="photo_id92" />
-			<!-- <img src="/media/img/photos/galleria/93_muro3_small.jpg"     id="photo_id93" /> -->
-			<!-- <img src="/media/img/photos/galleria/94_albero_small.jpg"    id="photo_id94" /> -->
-			<!-- <img src="/media/img/photos/galleria/12_DSC4944_small.jpg"   id="photo_id12" /> -->
-			<!-- <img src="/media/img/photos/galleria/13_DSC4945_small.jpg"   id="photo_id13" /> -->
-			<img src="/media/img/photos/galleria/14_DSC4714_small.jpg"
-				id="photo_id14" />
-			<!-- <img src="/media/img/photos/galleria/15_DSC4699_small.jpg"   id="photo_id15" /> -->
-			<img src="/media/img/photos/galleria/16_DSC4706_small.jpg"
-				id="photo_id16" />
-			<h2>
-				<strong>La sala per la colazione</strong>
-			</h2>
-			<img src="/media/img/photos/galleria/17_DSC4629_small.jpg"
-				id="photo_id17" />
-			<!-- <img src="/media/img/photos/galleria/18_DSC4632_small.jpg"   id="photo_id18" /> -->
-			<img src="/media/img/photos/galleria/19_DSC4596_small.jpg"
-				id="photo_id19" /> <img
-				src="/media/img/photos/galleria/20_DSC4604_small.jpg"
-				id="photo_id20" /> <img
-				src="/media/img/photos/galleria/21_DSC4635_small.jpg"
-				id="photo_id21" />
-			<!-- <img src="/media/img/photos/galleria/22_DSC4638_small.jpg"   id="photo_id22" /> -->
-			<img src="/media/img/photos/galleria/23_DSC4951_small.jpg"
-				id="photo_id23" />
-			<!-- <img src="/media/img/photos/galleria/24_DSC4946_small.jpg"   id="photo_id24" /> -->
-			<img src="/media/img/photos/galleria/26_DSC4621_small.jpg"
-				id="photo_id26" /> <img
-				src="/media/img/photos/galleria/31_DSC4616_small.jpg"
-				id="photo_id31" />
-			<h2>
-				<strong>Camera “David”</strong>
-			</h2>
-			<img src="/media/img/photos/galleria/35_DSC4739_small.jpg"
-				id="photo_id35" /> <img
-				src="/media/img/photos/galleria/34_DSC4731_small.jpg"
-				id="photo_id34" />
-			<!-- <img src="/media/img/photos/galleria/36_DSC4740_small.jpg"   id="photo_id36" /> -->
-			<img src="/media/img/photos/galleria/37_DSC4742_small.jpg"
-				id="photo_id37" />
-			<!-- <img src="/media/img/photos/galleria/39_DSC4749_small.jpg"   id="photo_id39" /> -->
-			<!-- <img src="/media/img/photos/galleria/33_DSC4771_small.jpg"   id="photo_id33" /> -->
-			<img src="/media/img/photos/galleria/40_DSC4760_small.jpg"
-				id="photo_id40" />
-			<!-- <img src="/media/img/photos/galleria/38_DSC4746_small.jpg"   id="photo_id38" /> -->
-			<h2>
-				<strong>Camera “Gaia”</strong>
-			</h2>
-			<img src="/media/img/photos/galleria/45_DSC4846_small.jpg"
-				id="photo_id45" />
-			<!-- <img src="/media/img/photos/galleria/47_DSC4896_small.jpg"   id="photo_id47" /> -->
-			<img src="/media/img/photos/galleria/48_DSC4897_small.jpg"
-				id="photo_id48" />
-			<!-- <img src="/media/img/photos/galleria/49_DSC4898_small.jpg"   id="photo_id49" /> -->
-			<img src="/media/img/photos/galleria/50_DSC4859_small.jpg"
-				id="photo_id50" />
-			<!-- <img src="/media/img/photos/galleria/52_DSC4869_small.jpg"   id="photo_id52" /> -->
-			<img src="/media/img/photos/galleria/46_DSC4851_small.jpg"
-				id="photo_id46" /> <img
-				src="/media/img/photos/galleria/53_DSC4932_small.jpg"
-				id="photo_id53" />
-			<h2>
-				<strong>Camera “Ludovico”</strong>
-			</h2>
-			<img src="/media/img/photos/galleria/60_DSC4914_small.jpg"
-				id="photo_id60" /> <img
-				src="/media/img/photos/galleria/62_DSC4919_small.jpg"
-				id="photo_id62" /> <img
-				src="/media/img/photos/galleria/63_DSC4942_small.jpg"
-				id="photo_id63" />
-			<h2>
-				<strong>Il salottino degli ospiti</strong>
-			</h2>
-			<img src="/media/img/photos/galleria/54_DSC4884_small.jpg"
-				id="photo_id54" /> <img
-				src="/media/img/photos/galleria/55_DSC4887_small.jpg"
-				id="photo_id55" /> <img
-				src="/media/img/photos/galleria/57_DSC4895_small.jpg"
-				id="photo_id57" />
-			<!-- <img src="/media/img/photos/galleria/58_DSC4891_small.jpg"   id="photo_id58" /> -->
-			<img src="/media/img/photos/galleria/56_DSC4921_small.jpg"
-				id="photo_id56" />
-
+			</figure>
 
 		</section>
 
