--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -48,10 +48,8 @@
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le
-								camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i
-								servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
