--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -74,17 +74,23 @@
 				<h1>Contatti</h1>
 			</hgroup>
 
+<!-- 			<aside> -->
+			
+<!-- 				<a href="#" class="opengallery" data-gallery-id="666"><img src="../media/img/photos/metropolitana.jpg" alt="" /></a> -->
+		
+<!-- 			</aside> -->
+
+<!-- 			<figure id="gallery"> -->
+<!-- 				<a href="../media/img/tmp/metro-grande.gif" -->
+<!-- 					data-milkslide="galleria" data-gallery-id="metro-grande" -->
+<!-- 					title="Il ???? si trova a 200 dalla fermata 'Affori Centro', linea gialla"></a> -->
+<!-- 			</figure> -->
+
 			<aside>
 			
-				<a href="#" class="opengallery" data-gallery-id="666"><img src="../media/img/photos/metropolitana.jpg" alt="" /></a>
+				<a href="../media/img/tmp/metro-grande.gif" ><img src="../media/img/photos/metropolitana.jpg"  /></a>
 		
 			</aside>
-
-			<figure id="gallery">
-				<a href="../media/img/tmp/metro-grande.gif"
-					data-milkslide="galleria" data-gallery-id="666"
-					title="Il ???? si trova a 200 dalla fermata 'Affori Centro', linea gialla"></a>
-			</figure>
 
 
 			<section>
