video youtube added

--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -74,22 +74,23 @@
 				<h1>Contatti</h1>
 			</hgroup>
 
-<!-- 			<aside> -->
-			
-<!-- 				<a href="#" class="opengallery" data-gallery-id="666"><img src="../media/img/photos/metropolitana.jpg" alt="" /></a> -->
-		
-<!-- 			</aside> -->
+			<!-- 			<aside> -->
 
-<!-- 			<figure id="gallery"> -->
-<!-- 				<a href="../media/img/tmp/metro-grande.gif" -->
-<!-- 					data-milkslide="galleria" data-gallery-id="metro-grande" -->
-<!-- 					title="Il ???? si trova a 200 dalla fermata 'Affori Centro', linea gialla"></a> -->
-<!-- 			</figure> -->
+			<!-- 				<a href="#" class="opengallery" data-gallery-id="666"><img src="../media/img/photos/metropolitana.jpg" alt="" /></a> -->
+
+			<!-- 			</aside> -->
+
+			<!-- 			<figure id="gallery"> -->
+			<!-- 				<a href="../media/img/tmp/metro-grande.gif" -->
+			<!-- 					data-milkslide="galleria" data-gallery-id="metro-grande" -->
+			<!-- 					title="Il ???? si trova a 200 dalla fermata 'Affori Centro', linea gialla"></a> -->
+			<!-- 			</figure> -->
 
 			<aside>
-			
-				<a href="../media/img/tmp/metro-grande.gif" ><img src="../media/img/photos/metropolitana.jpg"  /></a>
-		
+
+				<a href="../media/img/tmp/metro-grande.gif"><img
+					src="../media/img/photos/metropolitana.jpg" /></a>
+
 			</aside>
 
 
@@ -117,7 +118,20 @@
 				href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Guarda
 				la cartina dettagliata su Google Maps</a>
 
+
+			<aside>
+				<iframe width="320" height="240"
+					src="http://www.youtube.com/embed/XGSy3_Czz8k"> </iframe>
+			</aside>
+						<section>
+				<br><br>
+				<p>Guarda il video del percorso partendo dalla fermata della
+					Metropolitana Affori Centro (Linea Gialla)</p>
+			</section>
+			
 		</section>
+
+
 
 	</article>
 
@@ -125,9 +139,10 @@
 		<div>
 			<p class="contact">
 				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
-					Canal, 24 - 20161 Milano (MI) ITALIA</span><br />
-				<span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em>
-					- </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span>
+					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
+					href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare:
+					<a href="tel:+39.347.0652204">+39.347.0652204</a>
+				</span>
 			</p>
 			<p class="socials">
 				<strong>Per aggiornamenti, offerte speciali e<br />proposte
