video youtube added

--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -118,15 +118,16 @@
 				href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Guarda
 				la cartina dettagliata su Google Maps</a>
 
-
+		<section>
 			<aside>
-				<iframe width="320" height="240"
+				<iframe width="100%"
 					src="http://www.youtube.com/embed/XGSy3_Czz8k"> </iframe>
 			</aside>
 						<section>
-				<br><br>
+				 
 				<p>Guarda il video del percorso partendo dalla fermata della
 					Metropolitana Affori Centro (Linea Gialla)</p>
+			</section>
 			</section>
 			
 		</section>
