--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,7 +34,19 @@
 	<!-- [SEARCH ENGINES] -->
 	<meta name="robots" content="all" />
 
-
+<script type="text/javascript">
+ var userLang = navigator.language || navigator.userLanguage;
+  if(userLang !== "it")
+  	window.location.replace("./en/index.html");
+/* if(userLang==="en")
+ 	window.location.replace("./en/index.html");
+ else if(userLang==="fr")
+ 	window.location.replace("./fr/index.html");
+ else if(userLang==="es")
+ 	window.location.replace("./es/index.html");
+ else if(userLang==="de")
+ 	window.location.replace("./de/index.html"); */ 	
+ </script>
 
 </head>
 <body id="pageHomepage" class="it">
