--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -36,6 +36,7 @@
 
 <script type="text/javascript">
  var userLang = navigator.language || navigator.userLanguage;
+  alert ("The language is: " + userLang);
   if(userLang !== "it")
   	window.location.replace("./en/index.html");
 /* if(userLang==="en")
