--- a/WebContent/en/index.html
+++ b/WebContent/en/index.html
@@ -59,7 +59,7 @@
 		</section>
 		<aside>
 			<div>
-				<p id="txt1">Welcome al B<em class="amp">&</em>B</p>
+				<p id="txt1">Welcome to B<em class="amp">&</em>B</p>
 				<p id="txt2"><span>in Milan.</span></p>
 			</div>
 		</aside>
