--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 
  var userLang = navigator.language || navigator.userLanguage;
- window.alert("userLang "+userLang); 
+ window.alert("navigator.userAgent "+navigator.userAgent); 
   if(userLang.indexOf("it")==-1)
   	window.location.replace("./en/index.html");
 </script>
