--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -44,7 +44,7 @@
 				Breakfast a Milano
 			</a>
 
-			<nav id="menu" class="index">
+			<nav id="menu" class="servizi">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
