--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -47,7 +47,7 @@
 				Breakfast a Milano
 			</a>
 
-			<nav id="menu" class="index">
+			<nav id="menu" class="camere">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
