--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -46,7 +46,7 @@
 		<div>
 			<a id="logo" href="index.html">Bed <em class="amp">&</em> Breakfast a Milano</a>
 	
-			<nav id="menu" class="index">
+			<nav id="menu" class="casa">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
