--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -40,7 +40,7 @@
 				Breakfast a Milano
 			</a>
 
-			<nav id="menu" class="index">
+			<nav id="menu" class="contatti">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
