--- a/WebContent/it/gallery.html
+++ b/WebContent/it/gallery.html
@@ -30,7 +30,7 @@
 				Breakfast a Milano
 			</a>
 
-			<nav id="menu" class="index">
+			<nav id="menu" class="gallery">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
