--- a/WebContent/it/prezzi.html
+++ b/WebContent/it/prezzi.html
@@ -32,7 +32,7 @@
 				Breakfast a Milano
 			</a>
 
-			<nav id="menu" class="index">
+			<nav id="menu" class="prezzi">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
