google analytics added on each page

--- a/WebContent/it/gallery.html
+++ b/WebContent/it/gallery.html
@@ -21,6 +21,14 @@
 <script src="../script/js/interaction.js"></script>
 <meta name="robots" content="all" />
 <meta name="robots" content="noindex" />
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
 <body id="pageGallery" class="it">
 
@@ -67,41 +75,61 @@
 				<h2>
 					<strong>Camera 'Uno'</strong>
 				</h2>
-<img src="../media/img/photos/galleria/small/IMGS5874.jpg" id="photo_id5874" /> 
-<img src="../media/img/photos/galleria/small/IMGS5876.jpg" id="photo_id5876" /> 
-<img src="../media/img/photos/galleria/small/IMGS5877.jpg" id="photo_id5877" /> 
-<img src="../media/img/photos/galleria/small/IMGS5878.jpg" id="photo_id5878" /> 
-<img src="../media/img/photos/galleria/small/IMGS5880.jpg" id="photo_id5880" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5874.jpg"
+					id="photo_id5874" />
+				<img src="../media/img/photos/galleria/small/IMGS5876.jpg"
+					id="photo_id5876" />
+				<img src="../media/img/photos/galleria/small/IMGS5877.jpg"
+					id="photo_id5877" />
+				<img src="../media/img/photos/galleria/small/IMGS5878.jpg"
+					id="photo_id5878" />
+				<img src="../media/img/photos/galleria/small/IMGS5880.jpg"
+					id="photo_id5880" />
 				<h2>
 					<strong>Camera 'Due'</strong>
 				</h2>
-				<img src="../media/img/photos/galleria/small/IMGS5826.jpg" id="photo_id5826" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5832.jpg" id="photo_id5832" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5881.jpg" id="photo_id5881" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5883.jpg" id="photo_id5883" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5826.jpg"
+					id="photo_id5826" />
+				<img src="../media/img/photos/galleria/small/IMGS5832.jpg"
+					id="photo_id5832" />
+				<img src="../media/img/photos/galleria/small/IMGS5881.jpg"
+					id="photo_id5881" />
+				<img src="../media/img/photos/galleria/small/IMGS5883.jpg"
+					id="photo_id5883" />
 
 				<h2>
 					<strong>La sala per la colazione</strong>
 				</h2>
-				<img src="../media/img/photos/galleria/small/IMGS5887.jpg" id="photo_id5887" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5893.jpg" id="photo_idIMGS5893" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5900.jpg" id="photo_id5900" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5903.jpg" id="photo_id5903" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5904.jpg" id="photo_id5904" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5910.jpg" id="photo_id5910" /> 
+				<img src="../media/img/photos/galleria/small/IMGS5887.jpg"
+					id="photo_id5887" />
+				<img src="../media/img/photos/galleria/small/IMGS5893.jpg"
+					id="photo_idIMGS5893" />
+				<img src="../media/img/photos/galleria/small/IMGS5900.jpg"
+					id="photo_id5900" />
+				<img src="../media/img/photos/galleria/small/IMGS5903.jpg"
+					id="photo_id5903" />
+				<img src="../media/img/photos/galleria/small/IMGS5904.jpg"
+					id="photo_id5904" />
+				<img src="../media/img/photos/galleria/small/IMGS5910.jpg"
+					id="photo_id5910" />
 
 				<h2>
 					<strong>Cortile interno</strong>
 				</h2>
-				<img src="../media/img/photos/galleria/small/IMGS5841.jpg" id="photo_id5841" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5847.jpg" id="photo_idIMGS5847" />
-				
+				<img src="../media/img/photos/galleria/small/IMGS5841.jpg"
+					id="photo_id5841" />
+				<img src="../media/img/photos/galleria/small/IMGS5847.jpg"
+					id="photo_idIMGS5847" />
+
 				<h2>
 					<strong>Ingresso in via Bernardo da Canal 24</strong>
 				</h2>
-				<img src="../media/img/photos/galleria/small/IMGS5916.jpg" id="photo_id5916" /> 
-				<img src="../media/img/photos/galleria/small/IMGS5918.jpg" id="photo_id5918" />
-				<img src="../media/img/photos/galleria/small/IMGS5919.jpg" id="photo_id5919" />
+				<img src="../media/img/photos/galleria/small/IMGS5916.jpg"
+					id="photo_id5916" />
+				<img src="../media/img/photos/galleria/small/IMGS5918.jpg"
+					id="photo_id5918" />
+				<img src="../media/img/photos/galleria/small/IMGS5919.jpg"
+					id="photo_id5919" />
 			</figure>
 		</section>
 	</article>
