--- a/WebContent/en/index.html
+++ b/WebContent/en/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" class="full">
 <head>
-    <title>Welcome - Bed & Breakfast a Milano</title>
-    <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<!-- <meta name="viewport" content="width=device-width"> -->
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="../media/css/style.css">
-    <!--[if lt IE 9]>
+<title>Welcome - Bed & Breakfast a Milano</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<!-- <meta name="viewport" content="width=device-width"> -->
+<meta name="viewport"
+	content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link rel="stylesheet" href="../media/css/style.css">
+<!--[if lt IE 9]>
     <link rel="stylesheet" href="../media/css/ie.css">
     <![endif]-->
-	
-	<!-- [FONT EMBEDDING] -->
-	<!-- 	<link rel="stylesheet" href="http://f.fontdeck.com/s/css/tw8rERty3+tZwbQpfxuhJVo9m7Q/www.relais-abbazia.it/30043.css" type="text/css" /> -->
 
-	<!-- [FILE JS] -->
-    <!--[if lt IE 9]>
+<!-- [FONT EMBEDDING] -->
+<!-- 	<link rel="stylesheet" href="http://f.fontdeck.com/s/css/tw8rERty3+tZwbQpfxuhJVo9m7Q/www.relais-abbazia.it/30043.css" type="text/css" /> -->
+
+<!-- [FILE JS] -->
+<!--[if lt IE 9]>
 	<script src="/script/js/html5.js"></script>
     <![endif]-->
-	<script src="../script/js/mootools.js"></script>
-	<script src="../script/js/interaction.js"></script>
+<script src="../script/js/mootools.js"></script>
+<script src="../script/js/interaction.js"></script>
 
-	<meta name="robots" content="all" />
-
+<meta name="robots" content="all" />
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
 <body id="pageHomepage" class="en">
 	<header>
 		<div>
-			<a id="logo" href="index.html">Bed <em class="amp">&</em> Breakfast in Milan</a>		
+			<a id="logo" href="index.html">Bed <em class="amp">&</em>
+				Breakfast in Milan
+			</a>
 			<nav id="menu" class="index">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
@@ -39,9 +49,10 @@
 				</ul>
 			</nav>
 
-			 <nav id="lang2">
+			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a> </li>
+					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
+					</li>
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
@@ -49,22 +60,27 @@
 				</ul>
 			</nav>
 		</div>
-		
+
 	</header>
-	
+
 	<article>
-		
+
 		<section>
-			<div id="frame1" class="frame" data-image="../media/img/photos/homepage/home_photo.jpg"></div>
+			<div id="frame1" class="frame"
+				data-image="../media/img/photos/homepage/home_photo.jpg"></div>
 		</section>
 		<aside>
 			<div>
-				<p id="txt1">Welcome to B<em class="amp">&</em>B</p>
-				<p id="txt2"><span>in Milan.</span></p>
+				<p id="txt1">
+					Welcome to B<em class="amp">&</em>B
+				</p>
+				<p id="txt2">
+					<span>in Milan.</span>
+				</p>
 			</div>
 		</aside>
-	
+
 	</article>
-	
+
 </body>
 </html>
