--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,9 +4,15 @@
 <head>
 	<!-- [GENERAL] -->
     <title>Benvenuti - Bed & Breakfast a Milano</title>
-
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 <script type="text/javascript">
-	
 var lang, androidLang;
 // works for earlier version of Android (2.3.x)
 if (navigator && navigator.userAgent && (androidLang = navigator.userAgent.match(/android.*\W(\w\w)-(\w\w)\W/i))) {
