--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -37,8 +37,16 @@
 <!-- [SEARCH ENGINES] -->
 <meta name="robots" content="all" />
 
-<!-- [GOOGLE ANALYTICS (async)] -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
+
 <body id="pageCamere" class="it">
 
 	<header>
@@ -51,8 +59,10 @@
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le
+								camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i
+								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
