--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -3,63 +3,76 @@
 <html lang="it">
 <head>
 
-	
-	<!-- [GENERAL] -->
-    <title>La casa - Bed & Breakfast Milano</title>
 
-		<!-- [META TAGS] -->
-    <meta charset="utf-8">
+<!-- [GENERAL] -->
+<title>La casa - Bed & Breakfast Milano</title>
 
-	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<!-- [META TAGS] -->
+<meta charset="utf-8">
 
-	<!-- [MOBILE] -->
-	<!-- <meta name="viewport" content="width=device-width"> -->
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<!-- [FILE CSS] -->
-    <link rel="stylesheet" href="../media/css/style.css">
-    <!--[if lt IE 9]>
+<!-- [MOBILE] -->
+<!-- <meta name="viewport" content="width=device-width"> -->
+<meta name="viewport"
+	content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<!-- [FILE CSS] -->
+<link rel="stylesheet" href="../media/css/style.css">
+<!--[if lt IE 9]>
     <link rel="stylesheet" href="../media/css/ie.css">
     <![endif]-->
-	
-	<!-- [FONT EMBEDDING] -->
-	<script type="text/javascript">
+
+<!-- [FONT EMBEDDING] -->
+<script type="text/javascript">
 		jQuery.noConflict();
 	</script>
 
 
-	<!-- [FILE JS] -->
-    <!--[if lt IE 9]>
+<!-- [FILE JS] -->
+<!--[if lt IE 9]>
 	<script src="../script/js/html5.js"></script>
     <![endif]-->
-	<script src="../script/js/mootools.js"></script>
-	<script src="../script/js/interaction.js"></script>
+<script src="../script/js/mootools.js"></script>
+<script src="../script/js/interaction.js"></script>
 
-	<!-- [SEARCH ENGINES] -->
-	<meta name="robots" content="all" />
-
+<!-- [SEARCH ENGINES] -->
+<meta name="robots" content="all" />
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
 <body id="pageCasa" class="it">
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Bed <em class="amp">&</em> Breakfast a Milano</a>
-	
+			<a id="logo" href="index.html">Bed <em class="amp">&</em>
+				Breakfast a Milano
+			</a>
+
 			<nav id="menu" class="casa">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le
+								camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i
+								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
 
-			 <nav id="lang2">
+			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a> </li>
+					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
+					</li>
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
@@ -67,87 +80,167 @@
 				</ul>
 			</nav>
 		</div>
-		
+
 		<em class="backimage"></em>
-		</header>
-	
+	</header>
+
 	<article>
-		
+
 		<section>
-	
+
 			<hgroup>
-				<h1>La casa indipendente, a poche fermate di metropolitana da stazione centrale e Duomo di Milano</h1>
+				<h1>La casa indipendente, a poche fermate di metropolitana da
+					stazione centrale e Duomo di Milano</h1>
 			</hgroup>
 
-			<p>La casa risale al 1930, successivamente ricostruita dopo i danni subiti dai bombardamenti della seconda Guerra Mondiale che hanno colpito Milano.</p>
-	
+			<p>La casa risale al 1930, successivamente ricostruita dopo i
+				danni subiti dai bombardamenti della seconda Guerra Mondiale che
+				hanno colpito Milano.</p>
+
 			<aside>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5902"><img src="../media/img/photos/casa_pict1.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5880"><img src="../media/img/photos/casa_pict2.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5826"><img src="../media/img/photos/casa_pict3.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5934"><img src="../media/img/photos/casa_pict4.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5847"><img src="../media/img/photos/casa_pict5.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5910"><img src="../media/img/photos/casa_pict6.jpg" alt="" /></a>
+				<a href="#" class="opengallery" data-gallery-id="IMGS5902"><img
+					src="../media/img/photos/casa_pict1.jpg" alt="" /></a> <a href="#"
+					class="opengallery" data-gallery-id="IMGS5880"><img
+					src="../media/img/photos/casa_pict2.jpg" alt="" /></a> <a href="#"
+					class="opengallery" data-gallery-id="IMGS5826"><img
+					src="../media/img/photos/casa_pict3.jpg" alt="" /></a> <a href="#"
+					class="opengallery" data-gallery-id="IMGS5934"><img
+					src="../media/img/photos/casa_pict4.jpg" alt="" /></a> <a href="#"
+					class="opengallery" data-gallery-id="IMGS5847"><img
+					src="../media/img/photos/casa_pict5.jpg" alt="" /></a> <a href="#"
+					class="opengallery" data-gallery-id="IMGS5910"><img
+					src="../media/img/photos/casa_pict6.jpg" alt="" /></a>
 			</aside>
 
 
-<p>Una nuova rinascita nel 2014, con la ristrutturazione dell'intero edificio ad opera di papà Mimmo e dei fratelli, attenti a personalizzare gli spazi e a curare ogni dettaglio.
-La casa vanta di una sistemazione indipendete e di un grazioso giardino interno, dove sarà possibile gustare la colazione nelle mattine estive e godere di fresca tranquillità nei momenti di pausa dalle passeggiate cittadine.
-Nei mesi invernali la colazione sarà servita nel salone comune, ove si affacciano le due stanze, e dove saranno a disposizione degli ospiti, a qualunque ora del giorno, bibite calde e fresche.</p>
-<p>La dimora è situata nel cuore del quartiere Affori di Milano, antico ducato nella periferia settentrionale della città del quale è ancora possibile scorgere tracce medievali e rinascimentali.
-A pochi passi dal B&B ???? si trova Villa Litta con il suo Parco collinare, antica residenza estiva della nobiltà milanese, oggi sede della Biblioteca Comunale.</p>
-<p>Le trasformazioni industriali del secolo scorso e lo sviluppo territoriale che ha investito nel tempo il quartiere, hanno portato ad ampliare negli anni i collegamenti sia verso la parte nord dell'hinterland milanese sia verso il centro città.
-Il B&B ????? oggi sorge a soli 300 mt dalla fermata della Metropolitana Affori Centro (linea3Gialla), in pochi minuti sarà possibile raggiungere il centro della città e ammirare la maestosità del Duomo, passeggiare lungo la Galleria  Vittorio Emanuele, raggiungere il Teatro alla Scala e il Castello Sforzesco.
-Nei paraggi sorge l'Alcatraz, storico locale milanese che ospita concerti ed eventi.
-</p>
+			<p>Una nuova rinascita nel 2014, con la ristrutturazione
+				dell'intero edificio ad opera di papà Mimmo e dei fratelli, attenti
+				a personalizzare gli spazi e a curare ogni dettaglio. La casa vanta
+				di una sistemazione indipendete e di un grazioso giardino interno,
+				dove sarà possibile gustare la colazione nelle mattine estive e
+				godere di fresca tranquillità nei momenti di pausa dalle passeggiate
+				cittadine. Nei mesi invernali la colazione sarà servita nel salone
+				comune, ove si affacciano le due stanze, e dove saranno a
+				disposizione degli ospiti, a qualunque ora del giorno, bibite calde
+				e fresche.</p>
+			<p>La dimora è situata nel cuore del quartiere Affori di Milano,
+				antico ducato nella periferia settentrionale della città del quale è
+				ancora possibile scorgere tracce medievali e rinascimentali. A pochi
+				passi dal B&B ???? si trova Villa Litta con il suo Parco collinare,
+				antica residenza estiva della nobiltà milanese, oggi sede della
+				Biblioteca Comunale.</p>
+			<p>Le trasformazioni industriali del secolo scorso e lo sviluppo
+				territoriale che ha investito nel tempo il quartiere, hanno portato
+				ad ampliare negli anni i collegamenti sia verso la parte nord
+				dell'hinterland milanese sia verso il centro città. Il B&B ?????
+				oggi sorge a soli 300 mt dalla fermata della Metropolitana Affori
+				Centro (linea3Gialla), in pochi minuti sarà possibile raggiungere il
+				centro della città e ammirare la maestosità del Duomo, passeggiare
+				lungo la Galleria Vittorio Emanuele, raggiungere il Teatro alla
+				Scala e il Castello Sforzesco. Nei paraggi sorge l'Alcatraz, storico
+				locale milanese che ospita concerti ed eventi.</p>
 		</section>
 	</article>
 	<footer>
-			<div>
-					<p class="contact"><strong>????? B&B</strong><em> - </em><span>Via Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br/><span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span></p>
-			<p class="socials"><strong>Per aggiornamenti, offerte speciali e<br/>proposte last-minute seguici su:</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a> <a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a> <a href="http://www.tripadvisor.it/Hotel_Review???.html" class="tripadvisor">Tripadvisor</a></p>
-			</div>
+		<div>
+			<p class="contact">
+				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
+					Canal, 24 - 20161 Milano (MI) ITALIA</span><br />
+				<span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em>
+					- </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span>
+			</p>
+			<p class="socials">
+				<strong>Per aggiornamenti, offerte speciali e<br />proposte
+					last-minute seguici su:
+				</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a>
+				<a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a>
+				<a href="http://www.tripadvisor.it/Hotel_Review???.html"
+					class="tripadvisor">Tripadvisor</a>
+			</p>
+		</div>
 	</footer>
 
-<figure id="gallery">
-<a   href="../media/img/photos/galleria/IMGS5826.jpg"   data-milkslide="galleria"   data-gallery-id="IMGS5826"   title="Stanza 'Due' ????"></a>
-<a   href="../media/img/photos/galleria/IMGS5832.jpg"   data-milkslide="galleria"   data-gallery-id="02"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5834.jpg"   data-milkslide="galleria"   data-gallery-id="03"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5841.jpg"   data-milkslide="galleria"   data-gallery-id="04"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5847.jpg"   data-milkslide="galleria"   data-gallery-id="IMGS5847"   title="Tavolini nel giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5874.jpg"   data-milkslide="galleria"   data-gallery-id="06"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5875.jpg"   data-milkslide="galleria"   data-gallery-id="07"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5876.jpg"   data-milkslide="galleria"   data-gallery-id="08"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5877.jpg"   data-milkslide="galleria"   data-gallery-id="09"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5878.jpg"   data-milkslide="galleria"   data-gallery-id="10"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5880.jpg"   data-milkslide="galleria"   data-gallery-id="IMGS5880"   title="Stanza 'Uno' ????"></a>
-<a   href="../media/img/photos/galleria/IMGS5881.jpg"   data-milkslide="galleria"   data-gallery-id="12"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5883.jpg"   data-milkslide="galleria"   data-gallery-id="13"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5887.jpg"   data-milkslide="galleria"   data-gallery-id="14"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5889.jpg"   data-milkslide="galleria"   data-gallery-id="15"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5892.jpg"   data-milkslide="galleria"   data-gallery-id="16"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5893.jpg"   data-milkslide="galleria"   data-gallery-id="17"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5897.jpg"   data-milkslide="galleria"   data-gallery-id="18"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5900.jpg"   data-milkslide="galleria"   data-gallery-id="19"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5902.jpg"   data-milkslide="galleria"   data-gallery-id="IMGS5902"   title="Particolare in muratura"></a>
-<a   href="../media/img/photos/galleria/IMGS5903.jpg"   data-milkslide="galleria"   data-gallery-id="21"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5904.jpg"   data-milkslide="galleria"   data-gallery-id="22"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5909.jpg"   data-milkslide="galleria"   data-gallery-id="23"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5910.jpg"   data-milkslide="galleria"   data-gallery-id="IMGS5910"   title="La sala colazione"></a>
-<a   href="../media/img/photos/galleria/IMGS5911.jpg"   data-milkslide="galleria"   data-gallery-id="25"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5915.jpg"   data-milkslide="galleria"   data-gallery-id="26"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5916.jpg"   data-milkslide="galleria"   data-gallery-id="27"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5917.jpg"   data-milkslide="galleria"   data-gallery-id="28"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5918.jpg"   data-milkslide="galleria"   data-gallery-id="29"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5919.jpg"   data-milkslide="galleria"   data-gallery-id="30"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5920.jpg"   data-milkslide="galleria"   data-gallery-id="31"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5925.jpg"   data-milkslide="galleria"   data-gallery-id="32"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5934.jpg"   data-milkslide="galleria"   data-gallery-id="IMGS5934"   title="Stanza 'Due' ????"></a>
-<a   href="../media/img/photos/galleria/IMGS5935.jpg"   data-milkslide="galleria"   data-gallery-id="34"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS5937.jpg"   data-milkslide="galleria"   data-gallery-id="35"   title=""></a>
-<a   href="../media/img/photos/galleria/IMGS6177.jpg"   data-milkslide="galleria"   data-gallery-id="36"   title=""></a>		
-</figure>
-	
+	<figure id="gallery">
+		<a href="../media/img/photos/galleria/IMGS5826.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5826"
+			title="Stanza 'Due' ????"></a>
+		<a href="../media/img/photos/galleria/IMGS5832.jpg"
+			data-milkslide="galleria" data-gallery-id="02" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5834.jpg"
+			data-milkslide="galleria" data-gallery-id="03" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5841.jpg"
+			data-milkslide="galleria" data-gallery-id="04" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5847.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5847"
+			title="Tavolini nel giardino interno"></a>
+		<a href="../media/img/photos/galleria/IMGS5874.jpg"
+			data-milkslide="galleria" data-gallery-id="06" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5875.jpg"
+			data-milkslide="galleria" data-gallery-id="07" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5876.jpg"
+			data-milkslide="galleria" data-gallery-id="08" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5877.jpg"
+			data-milkslide="galleria" data-gallery-id="09" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5878.jpg"
+			data-milkslide="galleria" data-gallery-id="10" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5880.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5880"
+			title="Stanza 'Uno' ????"></a>
+		<a href="../media/img/photos/galleria/IMGS5881.jpg"
+			data-milkslide="galleria" data-gallery-id="12" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5883.jpg"
+			data-milkslide="galleria" data-gallery-id="13" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5887.jpg"
+			data-milkslide="galleria" data-gallery-id="14" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5889.jpg"
+			data-milkslide="galleria" data-gallery-id="15" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5892.jpg"
+			data-milkslide="galleria" data-gallery-id="16" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5893.jpg"
+			data-milkslide="galleria" data-gallery-id="17" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5897.jpg"
+			data-milkslide="galleria" data-gallery-id="18" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5900.jpg"
+			data-milkslide="galleria" data-gallery-id="19" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5902.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5902"
+			title="Particolare in muratura"></a>
+		<a href="../media/img/photos/galleria/IMGS5903.jpg"
+			data-milkslide="galleria" data-gallery-id="21" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5904.jpg"
+			data-milkslide="galleria" data-gallery-id="22" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5909.jpg"
+			data-milkslide="galleria" data-gallery-id="23" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5910.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5910"
+			title="La sala colazione"></a>
+		<a href="../media/img/photos/galleria/IMGS5911.jpg"
+			data-milkslide="galleria" data-gallery-id="25" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5915.jpg"
+			data-milkslide="galleria" data-gallery-id="26" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5916.jpg"
+			data-milkslide="galleria" data-gallery-id="27" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5917.jpg"
+			data-milkslide="galleria" data-gallery-id="28" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5918.jpg"
+			data-milkslide="galleria" data-gallery-id="29" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5919.jpg"
+			data-milkslide="galleria" data-gallery-id="30" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5920.jpg"
+			data-milkslide="galleria" data-gallery-id="31" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5925.jpg"
+			data-milkslide="galleria" data-gallery-id="32" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5934.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5934"
+			title="Stanza 'Due' ????"></a>
+		<a href="../media/img/photos/galleria/IMGS5935.jpg"
+			data-milkslide="galleria" data-gallery-id="34" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS5937.jpg"
+			data-milkslide="galleria" data-gallery-id="35" title=""></a>
+		<a href="../media/img/photos/galleria/IMGS6177.jpg"
+			data-milkslide="galleria" data-gallery-id="36" title=""></a>
+	</figure>
+
 
 </body>
 </html>
