--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -30,7 +30,14 @@
 <meta name="robots" content="all" />
 <!-- [GOOGLE MAPS API] -->
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
 <body id="pageContatti" class="it">
 
@@ -74,9 +81,9 @@
 				<h1>Contatti</h1>
 			</hgroup>
 			<aside>
-			
-			
- <script >
+
+
+				<script>
  	/* switch between metro pics*/
     function changeImage() 
     {
@@ -91,7 +98,8 @@
     }
     
  </script>
-		      <img id="imgMetro" src="../media/img/modified/metropolitana.jpg" onclick="changeImage()"/> 
+				<img id="imgMetro" src="../media/img/modified/metropolitana.jpg"
+					onclick="changeImage()" />
 			</aside>
 			<section>
 
@@ -117,18 +125,18 @@
 				href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Guarda
 				la cartina dettagliata su Google Maps</a>
 
-		<section>
-			<aside>
-				<iframe width="100%"
-					src="http://www.youtube.com/embed/XGSy3_Czz8k"> </iframe>
-			</aside>
-						<section>
-				 
-				<p>Guarda il video del percorso partendo dalla fermata della
-					Metropolitana Affori Centro (Linea Gialla)</p>
+			<section>
+				<aside>
+					<iframe width="100%" src="http://www.youtube.com/embed/XGSy3_Czz8k">
+					</iframe>
+				</aside>
+				<section>
+
+					<p>Guarda il video del percorso partendo dalla fermata della
+						Metropolitana Affori Centro (Linea Gialla)</p>
+				</section>
 			</section>
-			</section>
-			
+
 		</section>
 
 
