--- a/WebContent/it/index.html
+++ b/WebContent/it/index.html
@@ -2,37 +2,45 @@
 <!DOCTYPE html>
 <html lang="it" class="full">
 <head>
-	<!-- [GENERAL] -->
-    <title>Benvenuti - Bed & Breakfast a Milano</title>
+<!-- [GENERAL] -->
+<title>Benvenuti - Bed & Breakfast a Milano</title>
 
-		<!-- [META TAGS] -->
-    <meta charset="utf-8">
+<!-- [META TAGS] -->
+<meta charset="utf-8">
 
-	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<!-- [MOBILE] -->
-	<!-- <meta name="viewport" content="width=device-width"> -->
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-	<!-- [FILE CSS] -->
-    <link rel="stylesheet" href="../media/css/style.css">
-    <!--[if lt IE 9]>
+<!-- [MOBILE] -->
+<!-- <meta name="viewport" content="width=device-width"> -->
+<meta name="viewport"
+	content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- [FILE CSS] -->
+<link rel="stylesheet" href="../media/css/style.css">
+<!--[if lt IE 9]>
     <link rel="stylesheet" href="../media/css/ie.css">
     <![endif]-->
-	
-	<!-- [FONT EMBEDDING] -->
+
+<!-- [FONT EMBEDDING] -->
 <!-- 	<link rel="stylesheet" href="http://f.fontdeck.com/s/css/tw8rERty3+tZwbQpfxuhJVo9m7Q/www.relais-abbazia.it/30043.css" type="text/css" /> -->
 
-	<!-- [FILE JS] -->
-    <!--[if lt IE 9]>
+<!-- [FILE JS] -->
+<!--[if lt IE 9]>
 	<script src="/script/js/html5.js"></script>
     <![endif]-->
-	<script src="../script/js/mootools.js"></script>
-	<script src="../script/js/interaction.js"></script>
+<script src="../script/js/mootools.js"></script>
+<script src="../script/js/interaction.js"></script>
 
-	<!-- [SEARCH ENGINES] -->
-	<meta name="robots" content="all" />
+<!-- [SEARCH ENGINES] -->
+<meta name="robots" content="all" />
 
 
 
@@ -42,22 +50,27 @@
 	<header>
 		<div>
 
-			<a id="logo" href="index.html">Bed <em class="amp">&</em> Breakfast a Milano</a>
-			
+			<a id="logo" href="index.html">Bed <em class="amp">&</em>
+				Breakfast a Milano
+			</a>
+
 			<nav id="menu" class="index">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le
+								camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i
+								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
 
-			 <nav id="lang2">
+			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a> </li>
+					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
+					</li>
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
@@ -65,22 +78,27 @@
 				</ul>
 			</nav>
 		</div>
-		
+
 	</header>
-	
+
 	<article>
-		
+
 		<section>
-			<div id="frame1" class="frame" data-image="../media/img/photos/homepage/home_photo.jpg"></div>
+			<div id="frame1" class="frame"
+				data-image="../media/img/photos/homepage/home_photo.jpg"></div>
 		</section>
 		<aside>
 			<div>
-				<p id="txt1">Benvenuto al B<em class="amp">&</em>B</p>
-				<p id="txt2"><span>A Milano.</span></p>
+				<p id="txt1">
+					Benvenuto al B<em class="amp">&</em>B
+				</p>
+				<p id="txt2">
+					<span>A Milano.</span>
+				</p>
 			</div>
 		</aside>
-	
+
 	</article>
-	
+
 </body>
 </html>
