--- a/WebContent/it/prezzi.html
+++ b/WebContent/it/prezzi.html
@@ -12,6 +12,14 @@
 <!--[if lt IE 9]>
     <link rel="stylesheet" href="../media/css/ie.css">
     <![endif]-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 
 <script type="text/javascript">
 		jQuery.noConflict();
@@ -99,9 +107,10 @@
 		<div>
 			<p class="contact">
 				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
-					Canal, 24 - 20161 Milano (MI) ITALIA</span><br />
-				<span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em>
-					- </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span>
+					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
+					href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare:
+					<a href="tel:+39.347.0652204">+39.347.0652204</a>
+				</span>
 			</p>
 			<p class="socials">
 				<strong>Per aggiornamenti, offerte speciali e<br />proposte
