--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -5,6 +5,7 @@
 <!-- [GENERAL] -->
 <title>La casa - Bed & Breakfast Milano</title>
 
+
 <!-- [META TAGS] -->
 <meta charset="utf-8">
 
@@ -15,7 +16,14 @@
 <!-- <meta name="viewport" content="width=device-width"> -->
 <meta name="viewport"
 	content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58697439-1', 'auto');
+  ga('send', 'pageview');
+</script>
 <!-- [FILE CSS] -->
 <link rel="stylesheet" href="../media/css/style.css">
 <!--[if lt IE 9]>
@@ -48,8 +56,10 @@
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le
+								camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i
+								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
@@ -83,7 +93,8 @@
 				</p>
 				<a href="#" class="opengallery" data-gallery-id="IMGS5893"><img
 					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>sala
-						colazioni</span></a> <a href="#" class="opengallery" data-gallery-id="IMGS5847"><img
+						colazioni</span></a> <a href="#" class="opengallery"
+					data-gallery-id="IMGS5847"><img
 					src="../media/img/photos/servizi_giardino.jpg" alt="" /><span>giardino
 						interno</span></a>
 			</aside>
@@ -134,9 +145,10 @@
 		<div>
 			<p class="contact">
 				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
-					Canal, 24 - 20161 Milano (MI) ITALIA</span><br />
-				<span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em>
-					- </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span>
+					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
+					href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare:
+					<a href="tel:+39.347.0652204">+39.347.0652204</a>
+				</span>
 			</p>
 			<p class="socials">
 				<strong>Per aggiornamenti, offerte speciali e<br />proposte
@@ -150,29 +162,39 @@
 	</footer>
 
 	<figure id="gallery">
-			<a href="../media/img/photos/galleria/IMGS5893.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5893" title="La sala colazione."></a>
-		<a href="../media/img/photos/galleria/IMGS5892.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5892" title="La sala colazione."></a>
-		<a href="../media/img/photos/galleria/IMGS5897.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5897" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5893.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5893"
+			title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5892.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5892"
+			title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5897.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5897"
+			title="La sala colazione."></a>
 		<a href="../media/img/photos/galleria/.jpg" data-milkslide="galleria"
 			data-gallery-id="" title="La sala colazione."></a>
-		<a href="../media/img/photos/galleria/IMGS5900.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5900" title="La sala colazione."></a>
-		<a href="../media/img/photos/galleria/IMGS5903.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5903" title="La sala colazione."></a>
-		<a href="../media/img/photos/galleria/IMGS5904.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5904" title="La sala colazione."></a>
-		<a href="../media/img/photos/galleria/IMGS5887.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5887" title="La sala colazione."></a>
-			<a href="../media/img/photos/galleria/IMGS5910.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5910" title="La sala colazione."></a> 
-			
-		<a href="../media/img/photos/galleria/IMGS5847.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5847" title="Il giardino interno."></a> 
-		<a href="../media/img/photos/galleria/IMGS5841.jpg" data-milkslide="galleria"
-			data-gallery-id="IMGS5841" title="Il giardino interno."></a>			
+		<a href="../media/img/photos/galleria/IMGS5900.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5900"
+			title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5903.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5903"
+			title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5904.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5904"
+			title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5887.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5887"
+			title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5910.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5910"
+			title="La sala colazione."></a>
+
+		<a href="../media/img/photos/galleria/IMGS5847.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5847"
+			title="Il giardino interno."></a>
+		<a href="../media/img/photos/galleria/IMGS5841.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5841"
+			title="Il giardino interno."></a>
 	</figure>
 
 </body>
