google webmaster tools file added

--- a/WebContent/en/index.html
+++ b/WebContent/en/index.html
@@ -38,6 +38,7 @@
 			<a id="logo" href="index.html">Bed <em class="amp">&</em>
 				Breakfast in Milan
 			</a>
+
 			<nav id="menu" class="index">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
@@ -51,8 +52,7 @@
 
 			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
-					</li>
+					<li class="it2"><a href="../it/index.html"><span>IT</span></a></li>
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
